# kernel_extraction

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  rust-toolchain.toml
kernel_extraction/: .gitignore  Cargo.toml  __init__.py  build_n_test.sh
kernel_extraction/src/: lib.rs
kernel_extraction/test/: kernel_ref.npy  test_g_method_second_cpu.py  time_g_method_second_cpu.py  vv_corr_ref.npy
src/: compute_kernel.cu  compute_kernel.ptx  kernel_cpu.rs  kernel_cuda.rs  lib.rs
test/: test_g_method_second.py  test_g_method_second_cpu.py  time_g_method_second_cpu.py  xdu_corr_ref.npy
