[package]
name = "kernel_extraction"
version = "0.1.0"
authors = ["Lucas Tepper <lucas.tepper.91@gmail.com>"]
edition = "2021"

[lib]
name = "kernel_extraction"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.16.2"
ndarray = "0.15.4"
packed_simd = { version = "0.3.8", package = "packed_simd_2" }
rayon = "1.5.3"

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module"]
